[gd_scene load_steps=24 format=3 uid="uid://dk1iyi3vx4sgj"]

[ext_resource type="Script" path="res://scripts/element.gd" id="1_8i05w"]
[ext_resource type="PackedScene" uid="uid://pxda5hpbxdf0" path="res://objects/projectiles/neutron.tscn" id="2_ho7fk"]
[ext_resource type="Texture2D" uid="uid://calqncgvrw1yb" path="res://assets/textures/elements/sprite_atome_1.png" id="2_o4gdr"]
[ext_resource type="PackedScene" uid="uid://c07yxt6fcwqsl" path="res://objects/flying_label.tscn" id="3_sxo3m"]
[ext_resource type="PackedScene" uid="uid://e0v8px0kmilg" path="res://objects/hp_bar.tscn" id="4_3nwog"]
[ext_resource type="Material" uid="uid://xdit0dmtg7xi" path="res://assets/shaders/shader_material_object_dmg.tres" id="4_kwxc8"]
[ext_resource type="AudioStream" uid="uid://cllxabpo2wbbg" path="res://assets/audio/Kenney/Impacts/footstep_wood_000.ogg" id="6_68l0v"]
[ext_resource type="AudioStream" uid="uid://citbe0bk5aji2" path="res://assets/audio/Kenney/Impacts/footstep_wood_001.ogg" id="7_vae48"]
[ext_resource type="AudioStream" uid="uid://k4ih1bgg4g7p" path="res://assets/audio/Kenney/Impacts/impactWood_heavy_000.ogg" id="7_yo0rj"]
[ext_resource type="AudioStream" uid="uid://dbbvukmdeu1j0" path="res://assets/audio/Kenney/Digital/phaserUp4.ogg" id="8_2xgt2"]
[ext_resource type="AudioStream" uid="uid://cc5i3gvkxmolh" path="res://assets/audio/Kenney/Impacts/footstep_wood_002.ogg" id="8_c0tqq"]
[ext_resource type="AudioStream" uid="uid://c7t7kj0d2l0hu" path="res://assets/audio/Kenney/Impacts/footstep_wood_003.ogg" id="9_64hp6"]
[ext_resource type="AudioStream" uid="uid://c43q5tsdn0vl3" path="res://assets/audio/Kenney/Impacts/impactPunch_heavy_001.ogg" id="9_g6nye"]
[ext_resource type="AudioStream" uid="uid://uxj1owt7cf8g" path="res://assets/audio/Kenney/Impacts/footstep_wood_004.ogg" id="10_yrw2i"]
[ext_resource type="AudioStream" uid="uid://cdgm2ffprudag" path="res://assets/audio/Kenney/Impacts/impactWood_heavy_001.ogg" id="12_gdxwj"]
[ext_resource type="AudioStream" uid="uid://c5rj5ya0enh8h" path="res://assets/audio/Kenney/Impacts/impactWood_heavy_002.ogg" id="13_mc8pn"]
[ext_resource type="AudioStream" uid="uid://ich42yeb30g8" path="res://assets/audio/Kenney/Impacts/impactWood_heavy_003.ogg" id="14_31554"]
[ext_resource type="AudioStream" uid="uid://c8bw08hgmydj0" path="res://assets/audio/Kenney/Impacts/impactWood_heavy_004.ogg" id="15_40u3q"]

[sub_resource type="Gradient" id="Gradient_mc6tc"]
offsets = PackedFloat32Array(0, 0.340249, 0.423237, 0.738589)
colors = PackedColorArray(1, 1, 1, 0.8, 1, 1, 1, 0.42549, 1, 1, 1, 0.243137, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_naak6"]
gradient = SubResource("Gradient_mc6tc")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fdnrd"]
radius = 10.4399
height = 46.1723

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hnve0"]
streams_count = 5
stream_0/stream = ExtResource("6_68l0v")
stream_1/stream = ExtResource("7_vae48")
stream_2/stream = ExtResource("8_c0tqq")
stream_3/stream = ExtResource("9_64hp6")
stream_4/stream = ExtResource("10_yrw2i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2kc47"]
streams_count = 5
stream_0/stream = ExtResource("7_yo0rj")
stream_1/stream = ExtResource("12_gdxwj")
stream_2/stream = ExtResource("13_mc8pn")
stream_3/stream = ExtResource("14_31554")
stream_4/stream = ExtResource("15_40u3q")

[node name="Atom" type="Area2D" groups=["Element"]]
collision_layer = 4
collision_mask = 258
script = ExtResource("1_8i05w")
size = null
hp = null
projectile = ExtResource("2_ho7fk")
player_owned = null
shoot_strength = 100.0
player_projectile_speed_factor = 150.0
flying_label = ExtResource("3_sxo3m")
shooting_anim = null
enemy_ai = null
enemy_color = Color(1, 0.462745, 0, 1)
player_color = Color(0, 0.694118, 1, 0)
shake_interval = null
shake_factor = null
move_speed = null

[node name="Shadow" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = SubResource("GradientTexture2D_naak6")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
material = ExtResource("4_kwxc8")
position = Vector2(-2, 0)
texture = ExtResource("2_o4gdr")

[node name="ShootOrigin" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
rotation = 1.86584
shape = SubResource("CapsuleShape2D_fdnrd")

[node name="HPBarAnchor" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HPBar" parent="HPBarAnchor" instance=ExtResource("4_3nwog")]
unique_name_in_owner = true
visible = false
position = Vector2(0, -21)
scale = Vector2(5.12, 2.6)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
unique_name_in_owner = true
position = Vector2(-4.76837e-07, 0)
scale = Vector2(2.6, 2.5)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.15
autostart = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="TimerFlash" type="Timer" parent="."]
wait_time = 0.1

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_hnve0")
max_polyphony = 16
bus = &"Sfx"

[node name="AudioShoot" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_2kc47")
bus = &"Sfx"

[node name="AudioWin" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_2xgt2")
bus = &"Sfx"

[node name="AudioDestroy" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_g6nye")
bus = &"Sfx"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_element_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
[connection signal="timeout" from="TimerFlash" to="." method="_on_timer_flash_timeout"]
